--- a/version-2.html
+++ b/version-2.html
@@ -137,10 +137,8 @@
 
         .image-wrapper {
             position: relative;
-            transform: skewY(-3deg);
             overflow: hidden;
             border-radius: 0;
-            box-shadow: 0 30px 80px rgba(0, 0, 0, 0.2);
         }
 
         .hero-image {
@@ -148,7 +146,6 @@
             height: 600px;
             object-fit: cover;
             border-radius: 0;
-            clip-path: polygon(15% 0, 100% 0, 100% 100%, 0% 100%);
         }
 
         /* Carousel Controls */
@@ -290,7 +287,7 @@
     <div>
         <img src="header.svg" alt="" width="100%">
     </div>
-    <div id="heroCarousel" class="carousel slide hero-carousel" data-bs-ride="carousel">
+    <div id="heroCarousel" class="carousel slide hero-carousel" data-bs-ride="carousel" data-bs-interval="4000" data-bs-pause="false">
         <!-- Indicators -->
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="0" class="active"></button>
@@ -320,7 +317,7 @@
                         </div>
                         <div class="image-content">
                             <div class="image-wrapper">
-                                <img src="https://images.unsplash.com/photo-1631217868264-e5b90bb7e133?w=800&h=600&fit=crop" alt="Medical Care" class="hero-image">
+                                <img src="img/img-1.png" alt="Medical Care" class="hero-image">
                             </div>
                         </div>
                     </div>
@@ -341,13 +338,13 @@
 
                     <div class="content-wrapper">
                         <div class="text-content">
-                            <h1>ADVANCED<br>PATIENT<br>COMFORT SOLUTIONS</h1>
-                            <p>Innovative technology designed to enhance patient experience while maintaining the highest standards of medical care and safety protocols.</p>
-                            <button class="cta-button">Request Evaluation Samples</button>
+                            <h1>SafeTrak™ <br>Technology</h1>
+                            <p>Engineered to Control Motion. Designed to Prevent Complications. Our tubing-centric architecture absorbs tension before it reaches the catheter, protecting the insertion site and reducing failures.</p>
+                            <button class="cta-button">Explore SafeTrak™</button>
                         </div>
                         <div class="image-content">
                             <div class="image-wrapper">
-                                <img src="https://images.unsplash.com/photo-1579154204601-01588f351e67?w=800&h=600&fit=crop" alt="Patient Care" class="hero-image">
+                                <img src="img/img-2.png" alt="Patient Care" class="hero-image">
                             </div>
                         </div>
                     </div>
@@ -368,13 +365,13 @@
 
                     <div class="content-wrapper">
                         <div class="text-content">
-                            <h1>TRUSTED BY<br>HEALTHCARE<br>PROFESSIONALS</h1>
-                            <p>Join thousands of healthcare providers who rely on our cutting-edge securement solutions to deliver exceptional patient outcomes.</p>
-                            <button class="cta-button">Request Evaluation Samples</button>
+                            <h1>SafeTrak™ <br>Technology</h1>
+                            <p>Engineered to Control Motion. Designed to Prevent Complications. Our tubing-centric architecture absorbs tension before it reaches the catheter, protecting the insertion site and reducing failures.</p>
+                            <button class="cta-button">Explore SafeTrak™</button>
                         </div>
                         <div class="image-content">
                             <div class="image-wrapper">
-                                <img src="https://images.unsplash.com/photo-1576091160399-112ba8d25d1d?w=800&h=600&fit=crop" alt="Healthcare Professional" class="hero-image">
+                                <img src="img/img-3.png" alt="Healthcare Professional" class="hero-image">
                             </div>
                         </div>
                     </div>
