--- a/version-1.html
+++ b/version-1.html
@@ -37,9 +37,8 @@
             display: flex;
             align-items: center;
             width: 100%;
-            max-width: 1400px;
             margin: 0 auto;
-            padding: 0 50px;
+            padding: 0 0 0 50px;
         }
 
         .text-content {
@@ -94,7 +93,7 @@
 
         .hero-image {
             width: 100%;
-            height: 600px;
+            height: 100%;
             object-fit: cover;
             border-radius: 20px;
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.15);
@@ -230,7 +229,7 @@
     <div>
         <img src="header.svg" alt="" width="100%">
     </div>
-    <div id="heroCarousel" class="carousel slide hero-carousel" data-bs-ride="carousel">
+    <div id="heroCarousel" class="carousel slide hero-carousel" data-bs-ride="carousel" data-bs-interval="4000" data-bs-pause="false">
         <!-- Indicators -->
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="0" class="active"></button>
@@ -250,7 +249,7 @@
                             <button class="cta-button">Request Evaluation Samples</button>
                         </div>
                         <div class="image-content">
-                            <img src="https://images.unsplash.com/photo-1631217868264-e5b90bb7e133?w=800&h=600&fit=crop" alt="Medical Care" class="hero-image">
+                            <img src="img/banner-1.png" alt="Medical Care" class="hero-image">
                         </div>
                     </div>
                 </div>
@@ -261,12 +260,12 @@
                 <div class="hero-content">
                     <div class="content-wrapper">
                         <div class="text-content">
-                            <h1>ADVANCED<br>PATIENT<br>COMFORT SOLUTIONS</h1>
-                            <p>Innovative technology designed to enhance patient experience while maintaining the highest standards of medical care and safety protocols.</p>
-                            <button class="cta-button">Request Evaluation Samples</button>
+                            <h1>SafeTrak™ <br>Technology</h1>
+                            <p>Engineered to Control Motion. Designed to Prevent Complications. Our tubing-centric architecture absorbs tension before it reaches the catheter, protecting the insertion site and reducing failures.</p>
+                            <button class="cta-button">Explore SafeTrak™</button>
                         </div>
                         <div class="image-content">
-                            <img src="https://images.unsplash.com/photo-1579154204601-01588f351e67?w=800&h=600&fit=crop" alt="Patient Care" class="hero-image">
+                            <img src="img/banner-2.png" alt="Patient Care" class="hero-image">
                         </div>
                     </div>
                 </div>
@@ -277,12 +276,12 @@
                 <div class="hero-content">
                     <div class="content-wrapper">
                         <div class="text-content">
-                            <h1>TRUSTED BY<br>HEALTHCARE<br>PROFESSIONALS</h1>
-                            <p>Join thousands of healthcare providers who rely on our cutting-edge securement solutions to deliver exceptional patient outcomes.</p>
-                            <button class="cta-button">Request Evaluation Samples</button>
+                            <h1>SafeTrak™ <br>Technology</h1>
+                            <p>Engineered to Control Motion. Designed to Prevent Complications. Our tubing-centric architecture absorbs tension before it reaches the catheter, protecting the insertion site and reducing failures.</p>
+                            <button class="cta-button">Explore SafeTrak™</button>
                         </div>
                         <div class="image-content">
-                            <img src="https://images.unsplash.com/photo-1576091160399-112ba8d25d1d?w=800&h=600&fit=crop" alt="Healthcare Professional" class="hero-image">
+                            <img src="img/banner-3.png" alt="Healthcare Professional" class="hero-image">
                         </div>
                     </div>
                 </div>
