--- a/version-2.html
+++ b/version-2.html
@@ -81,7 +81,7 @@
             width: 100%;
             max-width: 1400px;
             margin: 0 auto;
-            padding: 0 50px;
+            padding: 0 0 0 50px;
         }
 
         .text-content {
@@ -143,7 +143,7 @@
 
         .hero-image {
             width: 100%;
-            height: 600px;
+            height: 640px;
             object-fit: cover;
             border-radius: 0;
         }
